--- a/src/app/form/form.page.html
+++ b/src/app/form/form.page.html
@@ -7,10 +7,10 @@
 <ion-content>
   <ion-item>
     <ion-label position="floating">Tâches</ion-label>
-    <ion-input  type="text" [(ngModel)]=""></ion-input>
+    <ion-input type="text" [(ngModel)]="todoAdd.taskName"></ion-input>
   </ion-item>
 </ion-content>
 
 <ion-footer>
-  <ion-button size="large" expand="full" routerLink="/home" (click)="recTodo()">Valider</ion-button>
+  <ion-button size="large" expand="full" (click)="recTodo()">Valider</ion-button>
 </ion-footer>
