--- a/src/app/form/form.page.html
+++ b/src/app/form/form.page.html
@@ -9,6 +9,9 @@
     <ion-label position="floating">Tâches</ion-label>
     <ion-input type="text" [(ngModel)]="todoAdd.taskName"></ion-input>
   </ion-item>
+  <ion-item>
+    <ion-button expand="full">Prendre une photo</ion-button>
+  </ion-item>
 </ion-content>
 
 <ion-footer>
